syntax = "proto3";

package se.qxx.protodb.test;

option java_package = "se.qxx.protodb.test";
option java_generic_services = true;

//---------------------------------------------------------------------------------------
//----------------------------------------------------------------------- Enumerations
//---------------------------------------------------------------------------------------

//---------------------------------------------------------------------------------------
//----------------------------------------------------------------------- Objects
//---------------------------------------------------------------------------------------
message SimpleTest {
  int32 ID = 1;
  double dd = 2;
  float ff = 3;
  int32 is = 4;
  int64 il = 5;
  bool bb = 6;  
  string ss = 7;
  bytes by = 8;
}

message SimpleTwo {
  int32 ID = 1;
  string title = 2;
  string director = 3;
}

message ObjectOne {
  int32 ID = 1;
  SimpleTest testOne = 2;
  int32 oois = 3;
}

message ObjectTwo {
  int32 ID = 1;
  SimpleTest testOne = 2;
  ObjectOne testTwo = 3;
  int32 otis = 4;
}

message ObjectThree {
  int32 ID = 1;
  SimpleTest apa = 2;
  ObjectTwo bepa = 3;
}

message RepSimpleList {
  int32 ID = 1;
  repeated string list_of_strings = 2;
  int32 happycamper = 3;
}

message RepObjectOne {
  int32 ID = 1;
  repeated SimpleTwo list_of_objects = 2;
  int32 happycamper = 3;
}

enum Rating {
	NotMatched = 0;
	ProbableMatch = 1;
	PositiveMatch = 2;
	ExactMatch = 3;
	SubsExist = 4;
}

message EnumOne {
	int32 ID = 1;
	string title = 2;
	Rating rating = 3;
}

message EnumOneList {
	int32 ID = 1;
	string title = 2;
	repeated Rating list_of_ratings = 3;
	string producer = 4;
}

message ObjectFour {
	int32 ID = 1;
	string fourTitle = 2;
	repeated bytes fourImage = 3;
}

message ObjectFive {
	int32 ID = 1;
	string fourTitle = 2;
	bytes fourImage = 3;
}

message RepObjectTwo {
	int32 ID = 1;
	string title = 2;
	repeated RepObjectOne listRepObject = 3;
}
